+ Switched out hardcoding of a 6 hour offset * Fixed small misaligned border issue + Changed the Sticker subtitle to include professor's name + Added debug functionality to query for a certain subject + Added a random color function

--- a/src/App.css
+++ b/src/App.css
@@ -30,13 +30,12 @@
 
 .debugContainer{
     width: 100%;
-    height: 600px;
+    height: 1000px;
     border: 4px solid blue;
     padding: 15px;
     overflow: hidden;
     display: flex;
     flex-direction: row;
-    justify-content: stretch;
 
 }
 
