--- a/src/components/schedule/ScheduleContainer.css
+++ b/src/components/schedule/ScheduleContainer.css
@@ -5,7 +5,7 @@
 
 .scheduleContainer{
     flex-grow: 1;
-    margin-left: 2px;
+    border-left: 2px solid gray;
     position: relative;
 }
 .scheduleContainer * {
